--- a/package.json
+++ b/package.json
@@ -4,8 +4,16 @@
   "description": "Gerador de senhas seguras",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite --open"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "nanoid": "^5.0.3",
+    "vite": "^5.0.0"
+  },
+  "type": "module",
+  "devDependencies": {
+    "eslint": "^8.54.0"
+  }
 }
